# genie-voice-agent

./: .gitignore  README.md  local-deploy.sh  local-undeploy.sh  start_app.sh
backend/: pyproject.toml  requirements.txt
backend/genie_voice/: __init__.py
backend/genie_voice/asr_eval/: README.md  __init__.py  deepgram_baseline.py  manifest.py  metrics.py  postprocess.py  rescore_results.py  whisper_baseline.py
backend/genie_voice/assist/: __init__.py  alignment.py  billing.py  genie_facts.py  resolution.py  validation.py
backend/genie_voice/config/: settings.py
backend/genie_voice/databricks/: __init__.py  bootstrap.py  client.py  constraints.py  data_quality.py  gold_insights.py  reference_ingest.py  reset.py  volume_state.py  warehouse_sql.py
backend/genie_voice/datagen/: __init__.py  build.py  generators.py  loader.py  scenarios.py  schema.py  sqlwriter.py
backend/genie_voice/enrich/: __init__.py  derive.py  engine.py  fm.py  local_runner.py
backend/genie_voice/genie/: __init__.py  client.py  space.py
backend/genie_voice/ingest/: producer.py  volume_writer.py
backend/genie_voice/lakebase/: __init__.py  call_ingest.py  cdf.py  seed.py
backend/genie_voice/mock/: call_scripts.py
backend/genie_voice/models/: __init__.py  contracts.py
backend/genie_voice/pipeline/: cli.py
backend/genie_voice/providers/: __init__.py  base.py  registry.py
backend/genie_voice/serve/: __init__.py  lakebase.py
backend/tests/: test_asr_metrics.py  test_asr_postprocess.py  test_assist_billing.py  test_assist_resolution.py  test_assist_validation.py
docs/: PRD.md  (+7 more)
(+61 files in other folders)
